<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_header"
            android:textSize="10pt">
        </TextView>

        <CheckBox
            android:id="@+id/CheckBoxResponseOffer"
            android:layout_height="wrap_content"
            android:text="@string/choose_offer"
            android:layout_width="fill_parent">
        </CheckBox>

        <CheckBox
            android:id="@+id/CheckBoxResponseRequest"
            android:layout_height="wrap_content"
            android:text="@string/choose_request"
            android:layout_width="fill_parent">
        </CheckBox>

        <EditText
            android:id="@+id/EditTextBook"
            android:layout_height="wrap_content"
            android:hint="@string/book_info"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <Spinner
            android:id="@+id/SpinnerTimePeriod"
            android:layout_height="wrap_content"
            android:prompt="@string/time_frame_title"
            android:layout_width="fill_parent"
            android:entries="@array/feedback_type_list">
        </Spinner>

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_body"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="372dp">
        </EditText>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedback_button"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>